--- a/src/demo/demo.html
+++ b/src/demo/demo.html
@@ -17,7 +17,7 @@
             width: 100%;
         }
     </style>
-
+    <script src="../../node_modules/typo-js/typo.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
     <!-- enable this section or the non-minimized section below -->
     <!--<% js.forEach(function(each){ %>-->
@@ -26,18 +26,17 @@
     <!-- non minimized version for ease of debugging -->
     <script src="../../bower_components/angular-bootstrap/ui-bootstrap.js"></script>
     <script src="../../bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-        <script src='../../dist/textAngular-rangy.min.js'></script>
-        <script src='../../dist/textAngular-sanitize.js'></script>
-        <script src='../../dist/textAngular.js'></script>
-        <script src='../../dist/textAngularSetup.js'></script>
-
+    <script src='../../dist/textAngular-rangy.min.js'></script>
+    <script src='../../dist/textAngular-sanitize.js'></script>
+    <script src='../../dist/textAngular.js'></script>
+    <script src='../../dist/textAngularSetup.js'></script>
 </head>
 
 <body>
     <div ng-app="textAngularTest" ng-controller="wysiwygeditor" class="container app">
         <h1>Editor <small>{{version}}</small></h1>
         <button ng-click="disabled = !disabled" unselectable>Disable text-angular Toggle</button>
-        <div text-angular="text-angular" name="htmlcontent" ng-model="htmlcontent" ta-disabled='disabled'></div>
+        <div text-angular="text-angular" name="htmlcontent" ng-model="htmlcontent" ta-disabled='disabled' spellcheck="false"></div>
         <h1>Raw HTML in a text area</h1>
         <textarea ng-model="htmlcontent" style="width: 100%"></textarea>
         <h1>Bound with ng-bind-html</h1>
@@ -47,7 +46,7 @@
         <button type="button" ng-click="htmlcontent = orightml">Reset</button>
         <p>Note: although we support classes and styles, angularjs' ng-bind-html directive will strip out all style attributes.</p>
         <h1>Option to masquerade as a fancy text-area - complete with form submission and optional ngModel</h1>
-        <text-angular name="htmlcontenttwo" ng-model="htmlcontenttwo" spellcheck="true">
+        <text-angular name="htmlcontenttwo" ng-model="htmlcontenttwo">
             <p>Any <b>HTML</b> we put in-between the text-angular tags gets automatically put into the editor if there <strong style="font-size: 12pt;"><u><em>is not</em></u></strong> a value assigned to the ngModel.</p>
             <p>If there is a value assigned to the ngModel, it replaces any html here. To see this, uncomment the line at the bottom of demo.html</p>
         </text-angular>
