copy dictionaries to dist folder, uglify typo-js

--- a/src/demo/demo.html
+++ b/src/demo/demo.html
@@ -20,7 +20,7 @@
             text-decoration: red underline;
         }
     </style>
-    <script src="../../node_modules/typo-js/typo.js"></script>
+    <script src="../../dist/textAngular-typo.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
     <!-- enable this section or the non-minimized section below -->
     <!--<% js.forEach(function(each){ %>-->
