underline fix demo

--- a/src/demo/demo.html
+++ b/src/demo/demo.html
@@ -17,7 +17,7 @@
             width: 100%;
         }
         marker.spelling-error{
-            text-decoration: red underline;
+            border-bottom: 1px red solid;
         }
     </style>
     <script src="../../dist/textAngular-typo.min.js"></script>
